# TestCC

./: CMakeLists.txt  README.md
examples/: empty number table.txt  lesser time event.txt  negative number line 3.txt  not number line 3.txt  success insertion.txt  wrong client name.txt  wrong time end.txt
src/: client.cpp  client.hpp  computer.cpp  computer.hpp  errors.hpp  event.cpp  event.h  event.hpp  insertion.cpp  insertion.hpp  main.cpp
src/compclub/: computer.h
tests/: computer_test.cpp  event_test.cpp  insertion_test.cpp
tests/examples/: excess number table.txt  wrong id event.txt  wrong time event.txt  wrong time start.txt
